# libdes

./: .gitignore  CMakeLists.txt  des.h
examples/: speed.c
